# motivational-dashboard

./: Countdown.py  FrontPage.py  Quotes.py  Timer.py  config.py  pyproject.toml  requirements.txt
files/csv/: layoffs.csv
src/: Timer.py  config.py
